<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btAddDateModify"
        android:layout_width="@dimen/no_indent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/bt_text_addDate_modify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAddTime"
        android:layout_width="@dimen/no_indent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/bt_text_addTime_modify"
        app:layout_constraintEnd_toEndOf="@+id/btAddDateModify"
        app:layout_constraintStart_toStartOf="@+id/btAddDateModify"
        app:layout_constraintTop_toBottomOf="@+id/btAddDateModify" />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="@dimen/no_indent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/color_hint"
        app:layout_constraintEnd_toEndOf="@+id/btAddDateModify"
        app:layout_constraintStart_toStartOf="@+id/btAddDateModify"
        app:layout_constraintTop_toBottomOf="@+id/btAddTime" />

    <EditText
        android:id="@+id/edContent"
        android:layout_width="@dimen/no_indent"
        android:layout_height="@dimen/no_indent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/content_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHint="@color/color_hint"
        app:layout_constraintBottom_toTopOf="@+id/btAddNoteModify"
        app:layout_constraintEnd_toEndOf="@+id/btAddDateModify"
        app:layout_constraintStart_toStartOf="@+id/btAddDateModify"
        app:layout_constraintTop_toBottomOf="@+id/edTitle"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btAddNoteModify"
        android:layout_width="@dimen/no_indent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/bt_text_addNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btAddDateModify"
        app:layout_constraintStart_toStartOf="@+id/btAddDateModify" />

</androidx.constraintlayout.widget.ConstraintLayout>